[project]
name = "woocommerceconnector"
authors = [
    { name = "libracore", email = "info@libracore.com"}
]
description = "WooCommerce Connector"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
